--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                                         <li class="current"><a href="about.html">About Us</a></li>
                                         <li class="dropdown"><a href="index.html">Our Courses </a>
                                             <ul>
-                                                <li class="dropdown">Stock Market Course</a>
+                                                <li class="dropdown"><a href="stock-market-courses.html">Stock Market Course</a>
                                                     <ul>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Basic to advance</a></li>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Advance price action</a></li>
@@ -107,7 +107,7 @@
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Trading Mindset</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="dropdown"><a data-bs-toggle="modal" data-bs-target="#exampleModal">Currency Market Courses</a>
+                                                <li class="dropdown"><a href="currency-market-courses.html">Currency Market Courses</a>
                                                     <ul>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Basic of Currency Market</a></li>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Advanced Price Action</a></li>
@@ -373,8 +373,8 @@
                                     <div class="row clearfix">
                                         <div class="col-lg-12 col-md-12 col-sm-12 links-column">
                                             <ul class="links-list clearfix">
-                                                <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Stock Market Courses</a></li>
-                                                <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Currency Market Courses</a></li>
+                                                <li><a href="stock-market-courses.html">Stock Market Courses</a></li>
+                                                <li><a href="currency-market-courses.html">Currency Market Courses</a></li>
                                                 <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Investing Services</a></li>
                                                 <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Portfolio Management</a></li>
                                             </ul>
