--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                         <li><a href="about.html">About Us</a></li>
                                         <li class="dropdown"><a href="index.html">Our Courses </a>
                                             <ul>
-                                                <li class="dropdown">Stock Market Course</a>
+                                                <li class="dropdown"><a href="stock-market-courses.html">Stock Market Course</a>
                                                     <ul>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Basic to advance</a></li>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Advance price action</a></li>
@@ -149,7 +149,7 @@
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Trading Mindset</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="dropdown"><a data-bs-toggle="modal" data-bs-target="#exampleModal">Currency Market Courses</a>
+                                                <li class="dropdown"><a href="currency-market-courses.html">Currency Market Courses</a>
                                                     <ul>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Basic of Currency Market</a></li>
                                                         <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Advanced Price Action</a></li>
@@ -384,7 +384,7 @@
                                     </p>
                                 </div>
                                 <div class="link-box">
-                                    <a data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Read More</span></a>
+                                    <a href="stock-market-courses.html"><span>Read More</span></a>
                                 </div>
                             </div>
                         </div>
@@ -412,7 +412,7 @@
                                     </p>
                                 </div>
                                 <div class="link-box">
-                                    <a data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Read More</span></a>
+                                    <a href="currency-market-courses.html"><span>Read More</span></a>
                                 </div>
                             </div>
                         </div>
@@ -520,7 +520,7 @@
                             </ul>
                             <div class="lower-box">
                                 <div class="btn-box">
-                                    <a href="index-2.html" class="theme-btn"><span>Read More</span></a>
+                                    <a href="about.html" class="theme-btn"><span>Read More</span></a>
                                 </div>
                                 <!-- <ul class="download-apps clearfix">
                                     <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
@@ -531,14 +531,25 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 image-column">
-                        <div class="image-box wow bounceInRight center">
+                        <div class="video-inner" style="background-image: url(assets/images/resource/mockup-1.png);">
+                            <a href="assets/images/royal-video.mp4" class="lightbox-image" data-caption="">
+                                <img src="assets/images/icons/icon-57.png" alt="">
+                            </a>
+                        </div>
+                        <!-- <div class="image-box prelat wow bounceInRight center">
                             <div class="image-shape">
                                 <div class="shape-1"></div>
                                 <div class="shape-2 rotate-me"
                                     style="background-image: url(assets/images/shape/shape-14.png);"></div>
                             </div>
+                            
+                            <div class="text-box1">
+                                <a href="assets/images/royal-video.mp4" class="lightbox-image" data-caption="">
+                                    <i class="flaticon-play"></i>
+                                </a>
+                            </div>
                             <figure class="image"><img src="assets/images/resource/mockup-1.png" alt=""></figure>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -746,7 +757,7 @@
                                 </div>
                             </div>
                             <div class="btn-box">
-                                <a href="" class="theme-btn btn-three"><span>Read More</span></a>
+                                <a href="contact.html" class="theme-btn btn-three"><span>Read More</span></a>
                             </div>
                         </div>
                     </div>
@@ -947,8 +958,8 @@
                                     <div class="row clearfix">
                                         <div class="col-lg-12 col-md-12 col-sm-12 links-column">
                                             <ul class="links-list clearfix">
-                                                <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Stock Market Courses</a></li>
-                                                <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Currency Market Courses</a></li>
+                                                <li><a href="stock-market-courses.html">Stock Market Courses</a></li>
+                                                <li><a href="currency-market-courses.html">Currency Market Courses</a></li>
                                                 <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Investing Services</a></li>
                                                 <li><a data-bs-toggle="modal" data-bs-target="#exampleModal">Portfolio Management</a></li>
                                             </ul>
